--- a/deployment.yml
+++ b/deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       restartPolicy: Always
       containers:
-      - image: hakktastic/car-service:0.0.1-SNAPSHOT
+      - image: hakktastic/car-service:latest
         imagePullPolicy: Always
         name: car-service
         ports:
