--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/car-service
 management.endpoint.health.probes.enabled=true
 management.endpoints.web.exposure.include=*
 #H2
-spring.datasource.url=jdbc:h2:mem:db-car-service
+spring.datasource.url=jdbc:h2:mem:db-car-service;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
