--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:x}:${MARIADB_PORT:x}/car_service?createDatabaseIfNotExist=true
 spring.datasource.username=${MARIADB_USER:x}
 spring.datasource.password=${MARIADB_PASSSWORD:x}
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
