--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ management.endpoint.health.probes.enabled=true
 management.endpoints.web.exposure.include=*
 # MariaDB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:x}:${MARIADB_PORT:x}/car_service?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:192.168.1.20}:${MARIADB_PORT:32323}/car_service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://192.168.1.20:30223/car_service?createDatabaseIfNotExist=true
 spring.datasource.username=${MARIADB_USER:x}
 spring.datasource.password=${MARIADB_PASSSWORD:x}
 spring.jpa.hibernate.ddl-auto=update
