--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:192.168.1.20}:${MARIADB_PORT:32323}/car_service?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mariadb://192.168.1.20:30223/car_service?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=mariadb
+spring.datasource.password=${MARIADB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
