HAK-74 debug datasource #6

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ management.endpoints.web.exposure.include=*
 # MariaDB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 #spring.datasource.url=jdbc:mariadb://${MARIADB_HOST:192.168.1.20}:${MARIADB_PORT:32323}/car_service?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mariadb://192.168.1.20:30223/car_service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://${MARIADB_HOST}:30223/car_service?createDatabaseIfNotExist=true
 spring.datasource.username=${MARIADB_USER}
 spring.datasource.password=${MARIADB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
